Edit index action in movies_controller.rb file. List all saved movies in index.html.erb file within movies views.

--- a/moviez/app/views/movies/index.html.erb
+++ b/moviez/app/views/movies/index.html.erb
@@ -6,4 +6,10 @@
   <button>Search</button>
 </form>
 
-<%= render @movies %>
+<ul>
+  <% @movies.each do |movie| %>
+    <li>
+      <%= movie.title %>
+    </li>
+  <% end %>
+</ul>
