Delete comment in routes.rb file. Add link to navbar partial view. Edit index action in movies_controller.rb file. Define new action. Create new.html.erb file within movies views and include form for search bar to search IMDB.

--- a/moviez/app/views/movies/index.html.erb
+++ b/moviez/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Check out these movies!</h1>
+<h1>Check out these saved movies!</h1>
 
 <form action="/movies" method="get">
   <label for="title">Search by movie title</label><br/>
@@ -9,7 +9,9 @@
 <ul>
   <% @movies.each do |movie| %>
     <li>
-      <%= movie.title %>
+      <a href="/movies/<%= movie.id %>">
+        <%= movie.title %>
+      </a>
     </li>
   <% end %>
 </ul>
