Add get /movies/new/search route. Define new_search and new actions in movies_controller.rb file. Create new.html.erb file within movies views.

--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -5,3 +5,12 @@
   <input type="string" name="title">
   <button>Search</button>
 </form>
+
+<% unless @movie == nil %>
+  <h3><%= @movie.title %></h3>
+    <ul>
+      <li>Year: <%= @movie.year %></li>
+      <li>Plot: <%= @movie.plot %></li>
+      <li>MPAA Rating: <%= @movie.mpaa_rating %></li>
+    </ul>
+<% end %>
