--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -13,4 +13,5 @@
       <li>Plot: <%= @movie.plot %></li>
       <li>MPAA Rating: <%= @movie.mpaa_rating %></li>
     </ul>
+    <%= button_to "Favorite this movie", add_new_favorite_path(title: @movie.title) %>
 <% end %>
