--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -6,12 +6,14 @@
   <button>Search</button>
 </form>
 
-<% unless @movie == nil %>
-  <h3><%= @movie.title %></h3>
-    <ul>
-      <li>Year: <%= @movie.year %></li>
-      <li>Plot: <%= @movie.plot %></li>
-      <li>MPAA Rating: <%= @movie.mpaa_rating %></li>
-    </ul>
-    <%= button_to "Favorite this movie", add_new_favorite_path(title: @movie.title) %>
+<% unless @movies == nil %>
+  <% @movies.each do |movie| %>
+    <h3><%= movie.title %></h3>
+      <ul>
+        <li>Year: <%= movie.year %></li>
+        <li>Plot: <%= movie.plot %></li>
+        <li>MPAA Rating: <%= movie.mpaa_rating %></li>
+      </ul>
+    <%= button_to "Favorite this movie", add_new_favorite_path(title: movie.title) %>
+  <% end %>
 <% end %>
