Add post /movies/:id route. Define edit action in movies_controller.rb file. Add button_to to show.html.erb file within movies views. Able to favorite a saved movie, updating its rating to 100.

--- a/moviez/app/views/movies/show.html.erb
+++ b/moviez/app/views/movies/show.html.erb
@@ -6,3 +6,4 @@
   <li>MPAA Rating: <%= @movie.mpaa_rating %></li>
   <li>Rating: <%= @movie.rating %></li>
 </ul>
+<%= button_to "Favorite this movie", edit_movie_path(rating: 100) %>
