--- a/moviez/app/views/movies/show.html.erb
+++ b/moviez/app/views/movies/show.html.erb
@@ -4,6 +4,6 @@
   <li>Year: <%= @movie.year %></li>
   <li>Plot: <%= @movie.plot %></li>
   <li>MPAA Rating: <%= @movie.mpaa_rating %></li>
-  <li>Rating: <%= @movie.rating %></li>
+  <li>Rating: <%= @movie.rating %><%= button_to "+1", edit_movie_path(rating: "up") %><%= button_to "-1", edit_movie_path(rating: "down") %></li>
 </ul>
-<%= button_to "Favorite this movie", edit_movie_path(rating: 100) %>
+<%= button_to "Favorite this movie", edit_movie_path(rating: "favorite") %>
