Show actor names as links on show.html.erb file within movies views.

--- a/moviez/app/views/movies/show.html.erb
+++ b/moviez/app/views/movies/show.html.erb
@@ -8,7 +8,7 @@
   <li>Cast:
     <ul>
       <% @movie.actors.each do |actor| %>
-        <li><%= actor.name %></li>
+        <li><a href="actors/:id"><%= actor.name %></a></li>
       <% end %>
     </ul>
   </li>
