--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -16,7 +16,8 @@
           <li>Plot: <%= movie.plot %></li>
           <li>MPAA Rating: <%= movie.mpaa_rating %></li>
         </ul>
-      <%= button_to "Favorite this movie", add_new_favorite_path(title: movie.title) %>
+      <%= button_to "Save this movie", add_new_movie_path(title: movie.title, rating: 50) %>
+      <%= button_to "Favorite this movie", add_new_movie_path(title: movie.title, rating: 100) %>
     </li>
   <% end %>
 </ol>
