Define index action in actors_controller.rb file. Create index.html.erb file within actors views. Add logic in create action in movies_controller.rb to control for duplication of actors. Use number helper for rating in show.html.erb file within movies views. Use text helper for plot in new.html.erb file within movies views.

--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -12,9 +12,11 @@
     <li>
       <h3><%= movie.title %></h3>
         <ul>
+          <li><%= image_tag movie.poster %></li>
           <li>Year: <%= movie.year %></li>
-          <li>Plot: <%= movie.plot %></li>
+          <li>Plot: <%= truncate(movie.plot, length: 50) %></li>
           <li>MPAA Rating: <%= movie.mpaa_rating %></li>
+          <li>Length: <%= movie.length %></li>
         </ul>
       <%= button_to "Save this movie", add_new_movie_path(title: movie.title) %>
       <%= button_to "Favorite this movie", add_new_movie_path(title: movie.title, rating: 100) %>
