--- a/moviez/app/views/movies/new.html.erb
+++ b/moviez/app/views/movies/new.html.erb
@@ -16,7 +16,7 @@
           <li>Year: <%= movie.year %></li>
           <li>Plot: <%= truncate(movie.plot, length: 50) %></li>
           <li>MPAA Rating: <%= movie.mpaa_rating %></li>
-          <li>Length: <%= movie.length %></li>
+          <li>Length: <%= pluralize(movie_length_hours(movie), 'hour') %> and <%= pluralize(movie_length_minutes(movie), 'minute') %></li>
         </ul>
       <%= button_to "Save this movie", add_new_movie_path(title: movie.title) %>
       <%= button_to "Favorite this movie", add_new_movie_path(title: movie.title, rating: 100) %>
